feat: techequip and testing before first steam release

--- a/interface/persona/techEquip/techEquip.config
+++ b/interface/persona/techEquip/techEquip.config
@@ -3,7 +3,7 @@
     "panefeature" : {
       "type" : "panefeature",
       "anchor" : "bottomRight",
-      "offset" : [-6, 0],
+      "offset" : [-10, 0],
       "positionLocked" : true
     },
     "background" : {
@@ -18,58 +18,84 @@
     },
     "label" : {
       "type" : "label",
-      "position" : [100, 47],
+      "position" : [100, 50],
       "hAnchor" : "mid",
-      "value" : "^#8d2027;P^#9e1d33;e^#b01943;r^#c21458;s^#d60e72;o^#ea0791;n^#ff00b7;a^reset; requires a functional grabber tech.\nEquip it?"
+      "value" : "^#8d2027;P^#9e1d33;e^#b01943;r^#c21458;s^#d60e72;o^#ea0791;n^#ff00b7;a^reset; requires a functional grabber tech.\nPlease choose a tech slot:"
     },
-    "btnDash" : {
+    "btnHead" : {
       "type" : "button",
-      "position" : [10, 13],
+      "position" : [30, 33],
       "pressedOffset" : [0, -1],
-      "caption" : "Equip",
-      "zlevel" : 3,
+      "caption" : "Head",
+      "zlevel" : 1,
       "base" : "/interface/persona/techEquip/button.png",
       "hover" : "/interface/persona/techEquip/button.png?multiply=FF0000FF",
       "pressed" : "/interface/persona/techEquip/button.png?multiply=FF0000FF",
-      "callback" : "techLoader.equipTech"
+      "callback" : "techEquip.head"
+    },
+    "btnBody" : {
+      "type" : "button",
+      "position" : [82.5, 33],
+      "pressedOffset" : [0, -1],
+      "caption" : "Body",
+      "zlevel" : 1,
+      "base" : "/interface/persona/techEquip/button.png",
+      "hover" : "/interface/persona/techEquip/button.png?multiply=FF0000FF",
+      "pressed" : "/interface/persona/techEquip/button.png?multiply=FF0000FF",
+      "callback" : "techEquip.body"
+    },
+    "btnLegs" : {
+      "type" : "button",
+      "position" : [135, 33],
+      "pressedOffset" : [0, -1],
+      "caption" : "Legs",
+      "zlevel" : 1,
+      "base" : "/interface/persona/techEquip/button.png",
+      "hover" : "/interface/persona/techEquip/button.png?multiply=FF0000FF",
+      "pressed" : "/interface/persona/techEquip/button.png?multiply=FF0000FF",
+      "callback" : "techEquip.legs"
     },
     "btnDismiss" : {
       "type" : "button",
-      "position" : [76, 13],
+      "position" : [30, 16],
       "pressedOffset" : [0, -1],
       "caption" : "Dismiss",
-      "zlevel" : 2,
+      "zlevel" : 1,
       "base" : "/interface/persona/techEquip/button.png",
       "hover" : "/interface/persona/techEquip/button.png?multiply=FF0000FF",
       "pressed" : "/interface/persona/techEquip/button.png?multiply=FF0000FF",
-      "callback" : "techLoader.dismiss"
+      "callback" : "techEquip.dismiss"
     },
     "btnIgnore" : {
       "type" : "button",
-      "position" : [144, 13],
+      "position" : [135, 16],
       "pressedOffset" : [0, -1],
       "caption" : "Ignore",
       "zlevel" : 1,
       "base" : "/interface/persona/techEquip/button.png",
       "hover" : "/interface/persona/techEquip/button.png?multiply=FF0000FF",
       "pressed" : "/interface/persona/techEquip/button.png?multiply=FF0000FF",
-      "callback" : "techLoader.ignore"
+      "callback" : "techEquip.ignore"
     }
   },
 
   "scrollWidgets" : [
     "body",
     "label",
-    "btnDash",
+    "btnHead",
+    "btnBody",
+    "btnLegs",
     "btnIgnore",
     "btnDismiss"
   ],
-  "scrollOffset" : [0,-50],
+  "scrollOffset" : [0,-75],
 
   "scriptWidgetCallbacks" : [
-    "techLoader.equipTech",
-    "techLoader.dismiss",
-    "techLoader.ignore"
+    "techEquip.head",
+    "techEquip.body",
+    "techEquip.legs",
+    "techEquip.dismiss",
+    "techEquip.ignore"
   ],
 
   "scripts" : ["/interface/persona/techEquip/techEquip.lua"],
