hotfix: give personatech / pane a logo

--- a/interface/persona/techEquip/techEquip.config
+++ b/interface/persona/techEquip/techEquip.config
@@ -16,6 +16,12 @@
       "position": [0, 0],
       "file" : "/interface/persona/techEquip/background.png"
     },
+    "logo" : {
+      "type" : "image",
+      "zlevel" : 1,
+      "position": [92, 14],
+      "file" : "/persona/modicon.png"
+    },
     "label" : {
       "type" : "label",
       "position" : [100, 50],
@@ -81,6 +87,7 @@
 
   "scrollWidgets" : [
     "body",
+    "logo",
     "label",
     "btnHead",
     "btnBody",
